# pm-loop

./: .gitignore  LICENSE  PAPER.md  README.md  executor.py  loop_config.json  orchestrator.py  pyproject.toml  runner.py  trust.py
agents/: prompts.py
